@@ -366,7 +366,8 @@ Nu_DebugDumpAll(NuArchive* pArchive)
 
     printf("*Archive pathname: '%s'\n", pArchive->archivePathname);
     printf("*Archive type: %d\n", pArchive->archiveType);
-    printf("*Header offset: %ld\n", pArchive->headerOffset);
+    printf("*Header offset: %ld (junk offset=%ld)\n",
+		pArchive->headerOffset, pArchive->junkOffset);
     printf("*Num records: %ld orig, %ld copy, %ld new\n",
         Nu_RecordSet_GetNumRecords(&pArchive->origRecordSet),
         Nu_RecordSet_GetNumRecords(&pArchive->copyRecordSet),
