@@ -1,3 +1,11 @@
+2003/10/16  ***** v2.0.1 shipped *****
+
+2003/10/16  fadden
+    - Added workaround for bad HFS option lists created by GSHK.
+    - Added junk-skipping feature.  Up to 1024 bytes of crud (e.g.
+      MacBinary headers or HTTP remnants) will be searched for evidence
+      of an archive.
+
 2003/06/19  sheppy
     - Added support for resource forks and file and aux types when built
       for Mac OS X.
